<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/name"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/name1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/desig"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/desig1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/direc"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/direc1" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>