<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/contactinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/contact" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/phone1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ph1" />

            <ImageButton
                android:id="@+id/call1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:scaleType="fitStart"
                android:src="@drawable/call" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/phone2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ph2" />

            <ImageButton
                android:id="@+id/call2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:scaleType="fitStart"
                android:src="@drawable/call" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/phone3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ph3" />

            <ImageButton
                android:id="@+id/call3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:scaleType="fitStart"
                android:src="@drawable/call" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/phone4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ph4" />

            <ImageButton
                android:id="@+id/call4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:scaleType="fitStart"
                android:src="@drawable/call" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/phone5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ph5" />

            <ImageButton
                android:id="@+id/call5"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:scaleType="fitStart"
                android:src="@drawable/call" />
        </LinearLayout>

        <TextView
            android:id="@+id/fax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fax" />
    </LinearLayout>

</ScrollView>